Update PoPengajuan Role Akses dan TcController Akses serta Css Full Screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,6 +53,12 @@ h6 {
   }
 }
 
+@media (max-width: 1000px) {
+  #main {
+    padding: 2px;
+    max-width: 100%;
+  }
+}
 /*--------------------------------------------------------------
 # Page Title
 --------------------------------------------------------------*/
